app/globals.css
@import "tailwindcss";

:root {
    --background: #ffffff;
    --foreground: #171717;
    --main-color: #2c4c7e;
    --card-background: #f0ebe4
}

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --color-card: var(--card-background);
    --color-main: var(--main-color);
    --spacing-md-padding-x: 6rem;
    --spacing-sm-padding-x: 3rem;
}

@media (prefers-color-scheme: dark) {
    :root {
        --background: #0a0a0a;
        --foreground: #f0ebe4;
        --main-color: #2c4c7e;
    }
}


@layer base {
    body {
        font-family: var(--font-paragraph);
    }

    h1, h2, h3, h4, h5, h6 {
        font-family: var(--font-heading);
        font-weight: 700;
        line-height: 1.2;
    }

    h1 {
        font-size: clamp(2.5rem, 6vw + 1rem, 4.5rem);
    }

    h2 {
        font-size: clamp(2rem, 4vw + 1rem, 3.25rem);
    }

    h3 {
        font-size: clamp(1.75rem, 3vw + 1rem, 2.5rem);
    }

    h4 {
        font-size: clamp(1.5rem, 2vw + 1rem, 2rem);
    }

    h5 {
        font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
    }

    h6 {
        font-size: clamp(1rem, 1vw + 1rem, 1.25rem);
    }
}

body {
    background: var(--background);
    color: var(--foreground);
}

